--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -5,7 +5,9 @@ html, body {
 }
 
 body {
-    background: radial-gradient(circle at center, #411073, #0d0d0d);
+    background: url('../../recursos/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -64,6 +66,7 @@ main {
 
 .card {
     background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(30px);
     border-radius: 20px;
     padding: 20px;
     width: 30%;
