--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -86,9 +86,35 @@ main {
 
 .card h3 {
     margin-top: 0;
+    color: #fff; 
+    font-size: 1.8em; 
+    font-weight: bold; 
+    text-align: center; 
+    -webkit-text-stroke: 1px #d923ba;
+    letter-spacing: 1px; 
 }
 
 .card p {
-    color: rgba(255, 255, 255, 0.8);
-    flex-grow: 1; 
+    color: #d923ba;
+    font-size: 1.5em; 
+    font-weight: 500; 
+    line-height: 1.5; 
+    text-align: center; 
+    letter-spacing: 0.5px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
+    -webkit-text-stroke: 0.5px #060506; 
+    flex-grow: 1;
+    margin-top: 10px;
+}
+
+
+
+.card img {
+    width: 100%;
+    height: 200px;
+    border-radius: 15px;
+    margin: 0 auto 170px; 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    object-fit: cover; 
+    display: block;
 }
